assets/css/main.scss
---
---

@charset "utf-8";

@use "sass:math";
@use "sass:string";

@use "variables" with (
  $max-content-width: {{ site.max_width | default: "930px" }}
);

@use "themes";
@use "layout";
@use "typography";
@use "navbar";
@use "footer";
@use "blog";
@use "publications";
@use "components";
@use "utilities";
@use "tabs";
@use "teachings";
@use "typograms";

:root,
html[data-theme="dark"] {
  --global-theme-color: #ae9142;
  --global-hover-color: #ae9142;
}

h1.post-title > .font-weight-bold {
  font-weight: 700 !important;
}

